--- a/.env
+++ b/.env
@@ -1,3 +1,16 @@
 VITE_BASE_URL=https://bb.vdev.tech/api
 # VITE_BASE_URL=https://bb.vdev.tech/api/api/swagger/swagger.json
 VITE_APP_NAME=Token_Based
+
+
+
+
+# CORS Origin block [run in terminal]
+# windows 
+"C:\Program Files\Google\Chrome\Application\chrome.exe" --disable-web-security --user-data-dir="%TEMP%\ChromeDev"
+
+#linux
+google-chrome --disable-web-security --user-data-dir="/tmp/ChromeDev"
+
+#mac
+/Applications/Google\ Chrome.app/Contents/MacOS/Google\ Chrome --disable-web-security --user-data-dir="/tmp/ChromeDev"
