--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.5",
     "cookies-next": "^4.2.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.29",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
